welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (weekday== true) {
	return true()
	}
	ele {
		return false()
	}
	if (vacation== true) {
		return true()
	}
	else {
		return false() 
	}
}
